--- a/Restkeeper/restkeeper_service/pom.xml
+++ b/Restkeeper/restkeeper_service/pom.xml
@@ -15,6 +15,7 @@
         <module>restkeeper_service_common</module>
         <module>restkeeper_operator</module>
         <module>restkeeper_operator_api</module>
+        <module>restkeeper_service_mq</module>
     </modules>
 
 
