--- a/Restkeeper/restkeeper_service/restkeeper_operator/pom.xml
+++ b/Restkeeper/restkeeper_service/restkeeper_operator/pom.xml
@@ -17,6 +17,10 @@
             <artifactId>restkeeper_operator_api</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-amqp</artifactId>
+        </dependency>
         <!--web依赖，结合dubbo后删除-->
         <!--<dependency>
             <groupId>org.springframework.boot</groupId>
