--- a/Restkeeper/restkeeper_service/pom.xml
+++ b/Restkeeper/restkeeper_service/pom.xml
@@ -16,6 +16,8 @@
         <module>restkeeper_operator</module>
         <module>restkeeper_operator_api</module>
         <module>restkeeper_service_mq</module>
+        <module>restkeeper_shop_api</module>
+        <module>restkeeper_shop</module>
     </modules>
 
 
