--- a/Restkeeper/restkeeper_web/restkeeper_enterprise_web/src/main/resources/bootstrap.yml
+++ b/Restkeeper/restkeeper_web/restkeeper_enterprise_web/src/main/resources/bootstrap.yml
@@ -1,6 +1,8 @@
 spring:
   application:
-    name: restkeeper-mq
+    name: enterpise-web
+  profiles:
+    active: dev
   cloud:
     nacos:
       discovery:
@@ -10,5 +12,6 @@ spring:
         file-extension: yml
         sharedDataids: common.yml
         refreshable-dataids: common.yml
+
 server:
-  port: 8089
+  port: 8081
