store relative function

--- a/Restkeeper/restkeeper_web/restkeeper_enterprise_web/pom.xml
+++ b/Restkeeper/restkeeper_web/restkeeper_enterprise_web/pom.xml
@@ -12,6 +12,13 @@
     <artifactId>restkeeper_enterprise_web</artifactId>
 
     <dependencies>
+
+      <dependency>
+        <groupId>com.alibaba.cloud</groupId>
+        <artifactId>spring-cloud-starter-alicloud-oss</artifactId>
+      </dependency>
+
+
         <dependency>
             <groupId>com.restkeeper</groupId>
             <artifactId>restkeeper_web_common</artifactId>
